framec_tests/language_specific/typescript/v3_facade_smoke/negative/strict_malformed_stmt.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                // Native parse (SWC) should flag missing initializer
                const x = ;
                -> $B()
            }
        }
}

